--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "sciron-twitch",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/bot.js",
   "scripts": {
-    "dev:start": "ts-node -r tsconfig-paths/register -r dotenv/config src/bot.ts",
-    "dev:restart": "ts-node-dev -r tsconfig-paths/register -r dotenv/config src/bot.ts"
+    "build": "tsc",
+    "start": "node -r dotenv/config .",
+    "dev": "ts-node -r tsconfig-paths/register -r dotenv/config src/bot.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
     "tmi.js": "^1.8.5",
     "zod": "^3.21.4"
