--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@prisma/client": "^4.16.0",
     "@t3-oss/env-core": "^0.4.1",
+    "@trpc/client": "^10.33.0",
+    "@trpc/server": "^10.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
